--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,7 @@
   {% endif %}
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}">
-  <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg">
 
   {% include gtag.html %}
   {% include gtm_head.html %}
