--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,21 +1,31 @@
 ---
-layout: default
+layout: base
 ---
 
-{% include site-header.html %}
+{% include header.html type="page" %}
 
-<main class="main  container">
+<div class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}" role="main">
+  <div class="row">
+    <div class="{% if page.full-width %} col {% else %} col-xl-8 offset-xl-2 col-lg-10 offset-lg-1 {% endif %}">
+      {% if page.before-content %}
+        <div class="before-content">
+          {% for file in page.before-content %}
+            {% include {{ file }} %}
+          {% endfor %}
+        </div>
+      {% endif %}
 
-  <article class="article  article--page  content  typeset">
+      {{ content }}
 
-    <h1>{{ page.title }}</h1>
+      {% if page.after-content %}
+        <div class="after-content">
+          {% for file in page.after-content %}
+            {% include {{ file }} %}
+          {% endfor %}
+        </div>
+      {% endif %}
 
-    {{ content }}
-
-  </article>
-
-  {% if page.aside == true %}{% include site-aside.html %}{% endif %}
-
-</main>
-
-{% include site-footer.html %}
+      {% include comments.html %}
+    </div>
+  </div>
+</div>
