--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,109 +1,197 @@
-<p>about-me works!</p>
 <div class="section">
     <div class="container tim-container">
         <div class="tim-title">
             <h2 class="title">About Me</h2>
             <br/>
         </div>
-        <div id="typography">
-            <div class="row">
-                <div class="typography-line">
-                    <h3>My name is JeongWon Her. I have the following qualities:</h3>
-                </div>
-                <div class="typography-line">
-                    <p>
-Languages: Python, Java, TypeScript, C#, C++
-<br />
-Technologies: Pytorch, ONNX, Deepstream, Spark, Alembic, Angular, React, .NET
-<br />
-* DevOps: CI/CD(github workflow), Docker(Harbor), Kubernetes(On premise)
-* Culture: Linux, Open Source, MSA
-* Methodology: Agile
-
-# Experience
->MLOps engineer  
->March 2021 - Current  
->Seoul, Korea
-    
-ML system integration, Orchestrate the steps in ML, Automation
-1. Project setup
-2. Data pipeline ([kubeflow](https://jwher.github.io/categories#kubeflow)...)  
-3. Modeling & training ([ml](https://jwher.github.io/categories#ml)...)  
-4. Serving ([nuclio](https://jwher.github.io/categories#nuclio)...)  
-
-Technologies: Python, Docker, React, Typescript  
-
-<br/>
-
->Java Backend Developer  
->2 months (January 2020 - February 2020)  
->Hivvlab  
->Seoul, Korea
-
-Winter internship  
-1. Researching top blockchain trends
-2. Find a specific transaction in distributed ledger
-3. Process transaction data and insertion
-
-Technologies: Java, Node.js  
-Culture: Spring-svn
-
-# Education
->Dongguk University  
->4 years (March 2015 - February 2021)  
->Seoul, Korea
-
-I've learned Computer Science and Engineering  
-Military service from Feb. 2016 until Nov. 2017
-
-What else do you need?
-
-hacell2@gamil.com
-                    </p>
-                </div>
-                <div class="typography-line">
-                    <span class="note">Quote</span>
-                    <blockquote class="blockquote">
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="source Title">Source Title</cite></footer>
-                    </blockquote>
-                </div>
-            </div>
+        <div class="typography-line">
+            <h3>My name is JeongWon Her. I have the following qualities:</h3>
+            <br />
         </div>
-        <br/>
+        <div class="typography-line">
+            <p>
+                Languages: Python, Java, TypeScript
+                <br />
+                Technologies: Pytorch, ONNX, Deepstream, Alembic, Angular
+                <br />
+                DevOps: CI/CD(github workflow), Docker(Harbor), Kubernetes(On premise)
+                <br />
+                Culture: Linux, Open Source, MSA
+                <br />
+                Methodology: Agile
+            </p>
+        </div>
     </div>
+</div>
+
+<app-recent-posts></app-recent-posts>
+
+<div class="section">
+    <div class="container tim-container">
+        <div class="tim-title">
+            <h2 class="title">Experience</h2>
+            <br/>
+        </div>
+        <div class="typography-line">
+            <p style="font-style: italic;">
+                MLOps engineer<br />
+                September 2021 - Current<br />  
+                Seoul, Korea<br />
+            </p>
+            <p>
+                ML system integration, Orchestrate the steps in ML, Automation
+                <a href="#" class="btn btn-link btn-warning">(MLOps)</a>
+                <br />
+                1. Project setup
+                <a href="#" class="btn btn-link btn-warning">(SDLC)</a>
+                <br />
+                2. Data & ML pipeline
+                <a href="https://jwher.github.io/categories#minio" class="btn btn-link btn-warning">(minIO)</a>
+                <a href="https://jwher.github.io/categories#airflow" class="btn btn-link btn-warning">(Airflow)</a>
+                <br />
+                3. Training
+                <a href="https://jwher.github.io/categories#mlflow" class="btn btn-link btn-warning">(MLFlow)</a>
+                <br />
+                4. Serving
+                <a href="https://jwher.github.io/categories#bento" class="btn btn-link btn-warning">(Bento)</a>
+                <br />
+                Technologies: FastAPI, Pytorch, Docker
+                <br />
+                Culture: Linux, Open Source, Github
+            </p>
+            <br />
+            <p style="font-style: italic;">
+                MLOps engineer<br />
+                March 2021 - September 2021<br />  
+                Certiware<br />
+                Seoul, Korea<br />
+            </p>
+            <p>
+                MLOps product survey and implementation
+                <br />
+                1. Managing Kubernetes
+                <a href="https://jwher.github.io/categories#kubernetes" class="btn btn-link btn-success">(Kubernetes)</a>
+                <br />
+                2. Model pipeline
+                <a href="https://jwher.github.io/categories#kubeflow" class="btn btn-link btn-success">(Kubeflow)</a>
+                <br />
+                3. Modeling & Training
+                <a href="https://jwher.github.io/categories#ml" class="btn btn-link btn-success">(ML)</a>
+                <br />
+                4. Serving
+                <a href="https://jwher.github.io/categories#nuclio" class="btn btn-link btn-success">(Nuclio)</a>
+                <br />
+                Technologies: Kubernetes, Kubeflow, Pytorch, Docker, TypeScript(React)
+                <br />
+                Culture: Linux, Open Source, Gitlab
+            </p>
+            <br />
+            <p style="font-style: italic;">
+                Java Backend Developer<br />
+                2 months (January 2020 - February 2020)<br />
+                Hivvlab<br />
+                Seoul, Korea<br />
+            </p>
+            <p>
+                Winter internship  
+                <br />
+                1. Researching top blockchain trends
+                <br />
+                2. Find a specific transaction in distributed ledger
+                <br />
+                3. Process transaction data and insertion
+
+                Technologies: Java, Node.js  
+                <br />
+                Culture: Spring-svn
+            </p>
+        </div>
+    </div>
+</div>
+<div class="section">
+    <div class="container tim-container">
+        <div class="tim-title">
+            <h2 class="title">Education</h2>
+            <br/>
+        </div>
+        <div class="typography-line">
+            <p style="font-style: italic;">
+                Dongguk University<br />
+                4 years (March 2015 - February 2021)<br />
+                Seoul, Korea<br />
+            </p>
+            <p>
+                I've learned Computer Science and Engineering  
+                <br />
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Data Structure)</a>
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Algorithm)</a>
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Disign Pattern)</a>
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(OS)</a>
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Parallel Programming)</a>
+                <br />
+                Military service from Feb. 2016 until Nov. 2017
+            </p>
+        </div>
+    </div>
+    <br/>
 </div>
 <div class="section" id="carousel">
-    <div class="container">
+    <div class="container tim-container">
         <div class="tim-title">
-            <h3>My story</h3>
+            <h3 class="title">My story</h3>
         </div>
-        <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
-                <div class="card page-carousel">
-                    <!-- <ngb-carousel>
-                        <ng-template ngbSlide>
-                            <img src="./assets/img/soroush-karimi.jpg" alt="Random first slide">
-                            <div class="carousel-caption">
-                                <p>Somewhere</p>
-                            </div>
-                        </ng-template>
-                        <ng-template ngbSlide>
-                            <img src="./assets/img/federico-beccari.jpg" alt="Random second slide">
-                            <div class="carousel-caption">
-                                <p>Somewhere else</p>
-                            </div>
-                        </ng-template>
-                        <ng-template ngbSlide>
-                            <img src="./assets/img/joshua-stannard.jpg" alt="Random third slide">
-                            <div class="carousel-caption">
-                                <p>Here it is</p>
-                            </div>
-                        </ng-template>
-                    </ngb-carousel> -->
-                </div>
-            </div>
+        <div class="card page-carousel">
+            <ngb-carousel>
+                <ng-template ngbSlide>
+                    <img src="./assets/img/soroush-karimi.jpg" alt="Random first slide">
+                    <div class="carousel-caption">
+                        <p>Somewhere</p>
+                    </div>
+                </ng-template>
+                <ng-template ngbSlide>
+                    <img src="./assets/img/federico-beccari.jpg" alt="Random second slide">
+                    <div class="carousel-caption">
+                        <p>Somewhere else</p>
+                    </div>
+                </ng-template>
+                <ng-template ngbSlide>
+                    <img src="./assets/img/joshua-stannard.jpg" alt="Random third slide">
+                    <div class="carousel-caption">
+                        <p>Here it is</p>
+                    </div>
+                </ng-template>
+            </ngb-carousel>
         </div>
     </div>
 </div>
-<!-- {% include button.html text="Buy me a coffee ☕️" link="https://buymeacoffee.com/jwher" color="#f68140" %} -->
+
+<div class="section">
+    <div class="rainbow-image">
+        <div class="rainbow"></div>
+        <div class="rainbow"></div>
+        <div class="rainbow"></div>
+        <div class="rainbow"></div>
+        <div class="rainbow"></div>
+        <div class="rainbow"></div>
+    </div>
+</div>
+
+<div class="section">
+    <div class="container tim-container">
+        <blockquote class="blockquote">
+            <br />
+            <p>What else do you need?</p>
+            hacell2@gamil.com
+            <p> </p>
+            <br />
+            <app-social-links>
+            </app-social-links>
+            <br />
+        </blockquote>
+        <div class="support">
+            <a href="https://www.buymeacoffee.com/jwher">
+                <img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=jwher&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff" />
+            </a>
+        </div>
+    </div>
+</div>
