--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,21 @@
-<p>home works!</p>
 <div class="wrapper">
-    <div class="page-header section-dark" style="background-image: url('assets/img/common/bamboo-road.jpg');">
+    <div class="page-header" style="background-image: url('assets/img/common/bamboo-road.jpg');">
         <div class="filter"></div>
         <div class="content-center">
-            <div class="container">
-                <div class="title-brand">
-                    <div class="angular-logo">
-                        <img src="assets/img/angular2-logo.png" alt="">
-                    </div>
-                    <h1 class="presentation-title">JWHer Tech Blog</h1>
-                    <!-- <div class="fog-low">
-                        <img src="assets/img/home/fog-low.png" alt="">
-                    </div>
-                    <div class="fog-low right">
-                        <img src="assets/img/home/fog-low.png" alt="">
-                    </div> -->
-                </div>
-
-                <h2 class="presentation-subtitle" style="text-align: center;">
-                    허정원 기술블로그
-                </h2>
+            <div class="title-brand">
+                <!-- <div class="angular-logo">
+                    <img src="assets/img/angular2-logo.png" alt="">
+                </div> -->
+                <h1 class="presentation-title">JWHer Tech Blog</h1>
             </div>
+            <h2 class="presentation-subtitle" style="text-align: center;">
+                허정원 기술블로그
+            </h2>
+            <h6 class="presentation-copyright">
+                Copyright © 2022, JeongWon Her and/or its subsidiaries or affiliates.
+            </h6>
+            <div class="moving-clouds" style="background-image: url('assets/img/home/clouds.png'); "></div>
         </div>
-        <div class="moving-clouds" style="background-image: url('assets/img/home/clouds.png'); "></div>
-        <h6 class=" category-absolute ml-auto mr-auto">
-            Copyright © 2022, JWHer and/or its subsidiaries or affiliates.
-        </h6>
     </div>
     <app-about-me></app-about-me>
 </div>
