--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     class="navbar navbar-expand-lg fixed-top navbar-transparent">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="https://jwher.github.io">JWHer Tech Blog</a>
+            <a class="navbar-brand" href="/">JWHer Tech Blog</a>
             <button
                 #openButton
                 class="navbar-opener"
