--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -40,20 +40,20 @@
             </p>
             <p>
                 ML system integration, Orchestrate the steps in ML, Automation
-                <a href="#" class="btn btn-link btn-warning">(MLOps)</a>
+                <a href="#" class="btn btn-outline-warning">MLOps</a>
                 <br />
                 1. Project setup
-                <a href="#" class="btn btn-link btn-warning">(SDLC)</a>
+                <a href="#" class="btn btn-outline-warning">SDLC</a>
                 <br />
                 2. Data & ML pipeline
-                <a href="https://jwher.github.io/categories#minio" class="btn btn-link btn-warning">(minIO)</a>
-                <a href="https://jwher.github.io/categories#airflow" class="btn btn-link btn-warning">(Airflow)</a>
+                <a href="https://jwher.github.io/categories#minio" class="btn btn-outline-warning">minIO</a>&nbsp;
+                <a href="https://jwher.github.io/categories#airflow" class="btn btn-outline-warning">Airflow</a>
                 <br />
                 3. Training
-                <a href="https://jwher.github.io/categories#mlflow" class="btn btn-link btn-warning">(MLFlow)</a>
+                <a href="https://jwher.github.io/categories#mlflow" class="btn btn-outline-warning">MLFlow</a>
                 <br />
                 4. Serving
-                <a href="https://jwher.github.io/categories#bento" class="btn btn-link btn-warning">(Bento)</a>
+                <a href="https://jwher.github.io/categories#bento" class="btn btn-outline-warning">Bento</a>
                 <br />
                 Technologies: FastAPI, Pytorch, Docker
                 <br />
@@ -70,16 +70,16 @@
                 MLOps product survey and implementation
                 <br />
                 1. Managing Kubernetes
-                <a href="https://jwher.github.io/categories#kubernetes" class="btn btn-link btn-success">(Kubernetes)</a>
+                <a href="https://jwher.github.io/categories#kubernetes" class="btn btn-outline-success">Kubernetes</a>
                 <br />
                 2. Model pipeline
-                <a href="https://jwher.github.io/categories#kubeflow" class="btn btn-link btn-success">(Kubeflow)</a>
+                <a href="https://jwher.github.io/categories#kubeflow" class="btn btn-outline-success">Kubeflow</a>
                 <br />
                 3. Modeling & Training
-                <a href="https://jwher.github.io/categories#ml" class="btn btn-link btn-success">(ML)</a>
+                <a href="https://jwher.github.io/categories#ml" class="btn btn-outline-success">ML</a>
                 <br />
                 4. Serving
-                <a href="https://jwher.github.io/categories#nuclio" class="btn btn-link btn-success">(Nuclio)</a>
+                <a href="https://jwher.github.io/categories#nuclio" class="btn btn-outline-success">Nuclio</a>
                 <br />
                 Technologies: Kubernetes, Kubeflow, Pytorch, Docker, TypeScript(React)
                 <br />
@@ -123,11 +123,11 @@
             <p>
                 I've learned Computer Science and Engineering  
                 <br />
-                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Data Structure)</a>
-                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Algorithm)</a>
-                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Disign Pattern)</a>
-                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(OS)</a>
-                <a href="https://jwher.github.io/categories#cs" class="btn btn-link btn-warning">(Parallel Programming)</a>
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-outline-warning">Data Structure</a>&nbsp;
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-outline-warning">Algorithm</a>&nbsp;
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-outline-warning">Disign Pattern</a>&nbsp;
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-outline-warning">OS</a>&nbsp;
+                <a href="https://jwher.github.io/categories#cs" class="btn btn-outline-warning">Parallel Programming</a>&nbsp;
                 <br />
                 Military service from Feb. 2016 until Nov. 2017
             </p>
