change instagram url

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -55,7 +55,7 @@
               </li>
               <hr>
               <li>
-                  <a href="https://www.linkedin.com/in/정원-허-1160b3193/"
+                  <a href="https://www.linkedin.com/in/jwher/"
                     rel="tooltip"
                     title="Follow me on Linkedin"
                     data-placement="bottom"
