--- a/src/app/components/social-links/social-links.component.html
+++ b/src/app/components/social-links/social-links.component.html
@@ -18,7 +18,7 @@
         </a>
     </li>
     <li>
-        <a href="https://www.linkedin.com/in/정원-허-1160b3193/"
+        <a href="https://www.linkedin.com/in/jwher/"
             rel="tooltip"
             title="Follow me on Linkedin"
             data-placement="bottom"
