--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,15 @@
 
 @import 'src/styles/variables';
 
+@keyframes heathing {
+    0% { transform: scale( .75 ); }
+    20% { transform: scale( 1 ); }
+    40% { transform: scale( .75 ); }
+    60% { transform: scale( 1 ); }
+    80% { transform: scale( .75 ); }
+    100% { transform: scale( .75 ); }
+  }
+
 .footer {
     text-align: center;
     
@@ -11,8 +20,19 @@
         padding: 25px;
         box-shadow: 0 -6px 10px 2px rgba(0, 0, 0, 0.15);
     
-        font-size: 2em;
+        font-size: 1em;
+        color: $light-gray;
         text-align: center;
-        font-weight: bold;
+        
+        display: flex;
+        justify-content: space-between;
+        .owner {
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        .heart {
+            color: #F00;
+            animation: 1s infinite heathing;
+        }
     }
 }
