--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -142,10 +142,9 @@ p{
     text-align: center;
     margin: 0 auto;
     width: 66%;
-    height: 33%;
     img{
         width: 100%;
-        height: 100%;
+        max-height: 70vh;
         object-fit: cover;
         border-radius: 12px;
     }
