--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,14 +1,17 @@
 <footer class="footer">
     <div class="end">
-        <div>
+        <div class="license">
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
                 <img alt="크리에이티브 커먼즈 라이선스" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
             </a>
+            &nbsp;
+            <p class="license-text">
             이 저작물은 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">크리에이티브 커먼즈 저작자표시-비영리-변경금지 4.0 국제 라이선스</a>에 따라 이용할 수 있습니다.
+            </p>
         </div>
         &nbsp;
         <div class="owner">
-            © 2022, made by JWHer <i class="fa fa-heart heart"></i>
+            © {{test | date: 'yyyy'}}, made by JWHer <i class="fa fa-heart heart"></i>
         </div>
     </div>
 </footer>
