--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -8,7 +8,13 @@
     60% { transform: scale( 1 ); }
     80% { transform: scale( .75 ); }
     100% { transform: scale( .75 ); }
-  }
+}
+
+@media screen and (max-width: 991px) {
+    .license-text{
+        display: none !important;
+    }
+}
 
 .footer {
     text-align: center;
@@ -16,7 +22,7 @@
     .end {
         background-color: $black-bg;
         width: 100%;
-        margin-top: 20px;
+        height: 80px;
         padding: 25px;
         box-shadow: 0 -6px 10px 2px rgba(0, 0, 0, 0.15);
     
@@ -26,7 +32,14 @@
         
         display: flex;
         justify-content: space-between;
+        .license{
+            display: flex;
+            align-items: center;
+            p{margin: 0;}
+        }
         .owner {
+            display: flex;
+            align-items: center;
             font-weight: bold;
             font-size: 1.2em;
         }
