--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
                 </div> -->
                 <h1 class="presentation-title">JWHer Tech Blog</h1>
             </div>
-            <h2 class="presentation-subtitle" style="text-align: center;">
+            <h2 class="presentation-subtitle">
                 허정원 기술블로그
             </h2>
             <h6 class="presentation-copyright">
