--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,1 +1,31 @@
-<p>posts works!</p>
+<div class="wrapper">
+    <div class="page-header" style="background-image: url('assets/img/posts/library.jpg');">
+        <h2 class="presentation-subtitle">
+            Posts
+        </h2>
+        <h6 class="presentation-copyright">
+            Let thine heart retain my words: Keep my commandments, and live.
+        </h6>
+    </div>
+    <li>
+        <table>
+            <tbody>
+                <tr>
+                    <th>
+                        <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+                    </th>
+                    <th *ngIf="page.thumbnail" rowspan="2" style="min-width: 15vh;">
+                        <a href="{{ page.url }}">
+                            <img src="{{ page.thumbnail }}" class="img-link" />
+                        </a>
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        {{page.desc}}
+                    </th>
+                </tr>
+            </tbody>
+        </table>
+    </li>
+</div>
