add posts componenet

--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -7,7 +7,7 @@
             Let thine heart retain my words: Keep my commandments, and live.
         </h6>
     </div>
-    <li>
+    <!-- <li>
         <table>
             <tbody>
                 <tr>
@@ -27,5 +27,7 @@
                 </tr>
             </tbody>
         </table>
-    </li>
+    </li> -->
+    <markdown katex src="https://raw.githubusercontent.com/JWHer/jwher.github.io/main/README.md"></markdown>
+    <!-- <markdown src="./assets/posts/2021-04-11-first-post.md"></markdown> -->
 </div>
