change styles & remove redundant bootstrap

--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -108,11 +108,7 @@ p{
     line-height: 2;
 }
 
-.tim-container{
-
-}
-
-.tim-title* {
+.container-title* {
     margin-top: 30px;
     margin-bottom: 25px;
     min-height: 32px;
