--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class="section">
-    <div class="container tim-container">
-        <div class="tim-title">
+    <div class="container">
+        <div class="container-title">
             <h2 class="title">About Me</h2>
             <br/>
         </div>
@@ -27,8 +27,8 @@
 <app-recent-posts></app-recent-posts>
 
 <div class="section">
-    <div class="container tim-container">
-        <div class="tim-title">
+    <div class="container">
+        <div class="container-title">
             <h2 class="title">Experience</h2>
             <br/>
         </div>
@@ -109,8 +109,8 @@
     </div>
 </div>
 <div class="section">
-    <div class="container tim-container">
-        <div class="tim-title">
+    <div class="container">
+        <div class="container-title">
             <h2 class="title">Education</h2>
             <br/>
         </div>
@@ -136,8 +136,8 @@
     <br/>
 </div>
 <div class="section" id="carousel">
-    <div class="container tim-container">
-        <div class="tim-title">
+    <div class="container">
+        <div class="container-title">
             <h3 class="title">My story</h3>
         </div>
         <div class="card page-carousel">
@@ -165,7 +165,7 @@
 </div>
 
 <div class="section">
-    <div class="container tim-container">
+    <div class="container">
         <blockquote class="blockquote">
             <br />
             <p>What else do you need?</p>
